# integrator

./: .gitignore  CMakeLists.txt  README.md  config  extern_functions.c  extern_functions.h  logger.c  logger.h  main.c  string_utils.c  string_utils.h
Fortran/: cos_f.f90  log_f.f90  rectangle.f90  simpson.f90  sin_f.f90  trapezium.f90
